fix: fixed-flash-messages had wrong width/top

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -212,7 +212,8 @@ main {
 
 #fixed-flash-messages {
     position: fixed;
-    top: $headerHeight;
+    top: $headerHeight + 10px;
+    margin-left: -15px;
     z-index: 500;
 
     .hide-top {
